--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Xiaoyu Nie's Personal Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -31,8 +31,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Assistant Professor of Economics<br>University of Oklahoma</p>
+        <h1>Xiaoyu Nie</h1>
+        <p>Undergraduate student of Physics<br>Xi'an Jiaotong University</p>
         <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
     <h3><p class="view"><a href="https://tyleransom.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://tyleransom.github.io/research.html">Research</a></p></h3>
